# backgammon-last-stuff

./: .gitignore  Cargo.toml  graph.ipynb
benches/: board.rs
results/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: board.rs  lib.rs  prob.rs  ratio.rs  utils.rs
